fix: header spacing

--- a/src/layout/Header/Header.css
+++ b/src/layout/Header/Header.css
@@ -9,10 +9,17 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  padding: 0 48px;
+  padding: 0 16px;
   width: 100%;
-  max-width: 1512px;
   height: 84px;
+
+  @media (min-width: 834px) {
+    padding: 0 48px;
+  }
+
+  @media (min-width: 1512px) {
+    max-width: 1512px;
+  }
 }
 
 .header-link {
